2013-04-12 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/setup/setup_visuals.php, include/functions_config.php,
	include/config_process.php, general/header.php: fixed the
	autorefresh and set a white list of pages with autorefresh in
	config_process.
	
	Fixes: #3609243

2013-04-12  Mario Pulido <mario.pulido@artica.es> 

       * godmode/alerts/configure_alert_action.php,
        godmode/alerts/configure_alert_command.php,
        godmode/alerts/configure_alert_template.php:Fixed help views 
	in Metaconsole

2013-04-12 Miguel de Dios <miguel.dedios@artica.es>

	* ChangeLog: updload lost changes.

2013-04-12 Miguel de Dios <miguel.dedios@artica.es>

	* include/javascript/pandora_modules.js: fixed the change the
	type of module when select network or local component.
	
	Fixes: #3610671
	
	* general/header.php: cleaned source code style.

2013-04-12  Sancho Lerena <slerena@artica.es>

	* extensions/ssh_gateway.php: Implemented support to connect
	Telnet/SSH on different ports than standard ones.

2013-04-12  Mario Pulido <mario.pulido@artica.es>
	
	* godmode/users/configure_user.php,
	godmode/modules/manage_network_components_form_common.php,
        godmode/modules/manage_network_components_form_network.php,
        include/help/en/help_meta_access.php,
        include/help/es/help_meta_access.php: Added meta_access help in 
	user editor and module network creation.

	*godmode/modules/manage_network_components_form_network.php: Added 
	help tips in module network creation 

2013-04-12  Sancho Lerena <slerena@artica.es>

	* include/functions.php: Added a new function to detect
	when a string data is a snapshot or now (by counting 
	\n > 2).

	* operation/agentes/datos_agente.php: Removed duped
	column with datetime information on string data.

	* operation/agentes/estado_monitores.php: Using snapshot
	detect function. 

2013-04-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Optimize the event graphs