@@ -1,0 +1,13 @@
+<?php
+/* Include package help/ja
+*/
+?>
+
+<p> メタコンソールのウィザードにはユーザのアクセスレベルがあります。レベルは、基本もしくは拡張です。
+<ol>
+<li><b>基本アクセス</b></li>
+基本アクセスユーザは、基本レベルにおけるアラートテンプレートのアラートおよび、基本レベルにおけるコンポーネントから作成されたモジュールのウィザードのみ参照できます。
+<li><b>拡張アクセス</b></li>
+拡張ユーザは、ウィザードで基本および拡張レベルのモジュールとそのアラートを参照できます。
+</ol>
+</p>
